Update home page

--- a/index.html
+++ b/index.html
@@ -8,22 +8,17 @@
 </head>
 <body>
     <h1><a href="index.html">Ripple Effect</a></h1>
-    <!--<div id="slideshow">
-        <div>
-            <img src="//farm6.static.flickr.com/5224/5658667829_2bb7d42a9c_m.jpg">
+    <center>
+        <div class="purposecontainer">
+            <h2 style="color: red">What we do.</h2>
+            <h3>Prevent the spread of HIV/AIDS by raising awareness and encouraging activism through knowledge, creativity and service.</h3>
+            <h2 style="color: red">How we do.</h2>
+            <h3>1. Become advocates for the stopping of the spread of HIV/AIDS by becoming knowledgeable about the implications of the disease and partnering with relevant campus departments.<br /> 2. Be a pillar in the Atlanta community by completing community service projects across Atlanta aiding those suffering from HIV/AIDS.</h3>
         </div>
-        <div>
-            <img src="//farm6.static.flickr.com/5230/5638093881_a791e4f819_m.jpg">
-        </div>
-        <div>
-            Pretty cool eh? This slide is proof the content can be anything.
-        </div>
-    </div>-->
+    </center>
     <table>
         <tbody>
           <tr>
-            <td><a href="Purpose.html">Purpose</a></td>
-            <td><a href="Service.html">Service</a></td>
             <td><a href="About.html">About</a></td>
           </tr>
         </tbody>
