--- a/About.html
+++ b/About.html
@@ -38,7 +38,7 @@
         </div>
         <div id="container">
             <div id="bio">
-            When Aadarsh became aware of HIV/AIDs issues in the LGBT community, he realized he wanted to make an impact and reduce the effects of this harmful disease by joining the Ripple Effect club.
+            When Aadarsh became aware of HIV/AIDs issues in the LGBT+ community, he realized he wanted to make an impact and reduce the effects of this harmful disease by joining the Ripple Effect club.
             </div>
             <p id="role">
                 Web Developer<br />
